{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e7e0880e-e20e-439e-8821-727ce932cd82",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5c81d5b8-a2e3-4010-aa8a-c3ca95e31821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Normal Attack",
                    "type": "Button",
                    "id": "49a046a8-f5ef-4c42-9c73-2dfca1094e59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill 1",
                    "type": "Button",
                    "id": "e73de3a3-923f-4b7f-8705-a8e76963f50e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill 2",
                    "type": "Button",
                    "id": "d16fb817-5c85-4f43-87c3-5132fcbda652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "c22751a9-a34b-468e-9f68-f122f2f4b6c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b0ae9a4-e817-4eb9-b9b9-12e4680052f6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b6e22c6-ea9a-4384-86a5-c2b3d7dfdd73",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a9e35a0-c8a7-4a8e-9eca-f1b474484c25",
                    "path": "<Keyboard>/#(I)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Normal Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "565c8913-b196-4fd9-9236-198e8f635784",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Normal Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6021e226-a4f7-4c72-8926-71b87574c2c4",
                    "path": "<Keyboard>/#(O)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11c4ddb7-43d4-4ead-acfc-0ba7fd1b6d1a",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68384ee6-aa73-428b-8f53-99ab4db7861b",
                    "path": "<Keyboard>/#(P)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15768626-0d24-4423-8a75-6539c0830d73",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill 2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6700c41-9506-43e3-aa4c-bbe6b607bb31",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2de4b55c-3e03-42c9-b0ab-365b72e5a676",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}